<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="share_link">https://practicum.yandex.ru/android-developer/</string>
    <string name="email">gnganggang@gmail.com</string>
    <string name="theme_message">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_link">https://yandex.ru/legal/practicum_offer/</string>
    <string name="not_found">Ничего не нашлось</string>
    <string name="favorites_track">Избранные треки</string>
    <string name="library_playlist">Плейлисты</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_library">Вы не создали ни одного плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="not_connection">Проблема со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refreshButton">Обновить</string>
    <string name="you_search">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="title">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="save">Сохранить</string>
    <string name="track_delete">Удалить трек?</string>
    <string name="track_delete_question">Вы уверенны, что хотите удалить трек из плейлиста?</string>
    <string name="delete_prove">Удалить</string>
    <string name="playlist_add">Добавить плейлист</string>
    <string name="playlist_created">Плейлист "%s" создан</string>
    <string name="playlist_track_has_already_add">Трек уже добавлен в плейлист "%s"</string>
    <string name="playlist_track_has_been_added">Добавлено в плейлист "%s"</string>
    <string name="playlist_track_empty">В плейлисте нет треков</string>
    <string name="playlist_alert_title">Завершить создание плейлиста?</string>
    <string name="playlist_alert_message">Все несохраненные данные будут потеряны</string>
    <string name="playlist_alert_delete_message">Вы уверены, что хотите удалить этот плейлист?</string>
    <string name="alert_cancel">Отмена</string>
    <string name="playlist_alert_confirm">Завершить</string>
    <string name="playlist_not_track_to_share">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="notification_permission">Это разрешения необходимо для добавления картинки к плейлисту</string>
    <string name="playlist_share">Поделиться</string>
    <string name="playlist_edit">Редактировать информацию</string>
    <string name="playlist_delete">Удалить плейлист</string>
    <string name="image_is_not_selected">Картинка не выбрана</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <plurals name="track_counter">
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

    <plurals name="mins_counter">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>
</resources>