<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            android:text="@string/settings"
            style="@style/PanelHeaderNameActivity"/>
    </FrameLayout>

    <FrameLayout
        style="@style/LocationSettingsItems"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/TextActivitySettings"
            android:layout_marginTop="21dp"
            android:text="@string/dark_theme"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/theme_switcher"
            style="@style/SwitchStyle"
            />
    </FrameLayout>

    <FrameLayout
        style="@style/LocationSettingsItems"
        android:paddingTop="@dimen/medium_padding"
        android:id="@+id/share_app">

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/share"/>

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/share_app" />
    </FrameLayout>

    <FrameLayout
        style="@style/LocationSettingsItems"
        android:paddingTop="@dimen/medium_padding"
        android:id="@+id/message_to_support">

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/support"/>

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/write_support"/>
    </FrameLayout>

    <FrameLayout
        style="@style/LocationSettingsItems"
        android:paddingTop="@dimen/medium_padding"
        android:id="@+id/user_agreement_button">

        <ImageView
            style="@style/ImageSettings"
            android:src="@drawable/arrow_forward"/>

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/user_agreement"/>
    </FrameLayout>

</LinearLayout>

