<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_blue"
    android:orientation="vertical"
    android:paddingStart="16dp"
    android:paddingEnd="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="14dp"
        android:text="@string/app_name"
        android:textColor="@color/YP_white"
        android:textSize="22sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/YP_white"
        android:text="@string/search"
        android:textColor="@color/YP_black"
        android:textSize="22sp"
        app:icon="@drawable/search"
        app:iconGravity="textStart"
        app:iconTint="@color/YP_black"
        app:iconPadding="8dp"
        app:cornerRadius="16dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/YP_white"
        android:text="@string/library"
        android:textColor="@color/YP_black"
        android:textSize="22sp"
        app:icon="@drawable/library"
        app:iconGravity="textStart"
        app:iconTint="@color/YP_black"
        app:iconPadding="8dp"
        app:cornerRadius="16dp"
        android:textAllCaps="false"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="@color/YP_white"
        android:text="@string/settings"
        android:textColor="@color/YP_black"
        android:textSize="22sp"
        app:icon="@drawable/settings"
        app:iconGravity="textStart"
        app:iconTint="@color/YP_black"
        app:iconPadding="8dp"
        app:cornerRadius="16dp"
        android:textAllCaps="false"/>

</LinearLayout>