<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimaryVariant"
    tools:context=".ui.search.SearchFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <TextView
            style="@style/PanelHeaderNameActivity"
            android:text="@string/search" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/low_padding"
        android:paddingTop="8dp"
        android:paddingEnd="@dimen/low_padding">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:background="@drawable/edit_text_bar"
            android:cursorVisible="true"
            android:drawableStart="@drawable/search_bar"
            android:drawablePadding="8dp"
            android:drawableTint="?attr/colorSecondaryVariant"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:inputType="text"
            android:paddingVertical="8.5dp"
            android:paddingStart="12dp"
            android:textColor="@color/YP_black"
            android:textColorHint="?attr/colorSecondaryVariant"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/text_size_additional_screens" />

        <Button
            android:id="@+id/clear_text"
            android:layout_width="46dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/search_bar"
            android:layout_alignBottom="@id/search_bar"
            android:layout_marginEnd="-6dp"
            android:background="@android:color/transparent"
            android:backgroundTint="?attr/colorOnBackground"
            android:drawableEnd="@drawable/cancel"
            android:drawableTint="?attr/colorSecondaryVariant"
            android:visibility="invisible" />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_track"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminateTint="@color/YP_blue"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/history_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/you_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="42dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/ys_display_medium"
            android:text="@string/you_search"
            android:textColor="?attr/colorSecondary"
            android:textFontWeight="500"
            android:textSize="@dimen/medium_text_size" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="gone"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <Button
            android:id="@+id/clear_history"
            style="@style/SmallButton"
            android:text="@string/clear_history" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/placeholder_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/placeholder_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="102dp"
            android:layout_marginBottom="@dimen/low_padding" />

        <TextView
            android:id="@+id/placeholder_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/high_padding"
            android:fontFamily="@font/ys_display_medium"
            android:textAlignment="center"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/medium_text_size" />

        <Button
            android:id="@+id/placeholder_button"
            style="@style/SmallButton"
            android:text="@string/refreshButton"
            android:visibility="gone" />
    </LinearLayout>
</LinearLayout>