<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.playlistmaker.ui.library.CreatePlaylistsFragment">

    <ImageView
        android:id="@+id/back"
        style="@style/ArrowBackButton"
        android:layout_marginStart="@dimen/low_padding"
        android:layout_marginTop="@dimen/low_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/create_playlist_header"
        style="@style/PanelHeaderNameActivity"
        android:text="@string/new_playlist"
        android:layout_marginStart="@dimen/high_padding"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="14dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/back"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_pl_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="387dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_border_pl_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/low_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_pl_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/high_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_border_pl_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/medium_padding"/>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_bottom_pl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="input_layout_description"
        app:barrierDirection="bottom"/>

    <ImageView
        android:id="@+id/playlist_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="26dp"
        android:scaleType="centerInside"
        android:src="@drawable/placeholder_image"
        android:background="@drawable/dotted_line"
        app:layout_constraintDimensionRatio="H, 1:1"
        app:layout_constraintEnd_toStartOf="@+id/right_border_pl_24"
        app:layout_constraintStart_toStartOf="@+id/left_border_pl_24"
        app:layout_constraintTop_toBottomOf="@+id/create_playlist_header"
        app:layout_constraintBottom_toTopOf="@id/input_layout_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        style="@style/PlaylistInputLayout"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/playlist_image"
        app:layout_constraintStart_toStartOf="@id/left_border_pl_16"
        app:layout_constraintEnd_toEndOf="@id/right_border_pl_16"
        app:boxStrokeColor="@color/YP_blue">
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text_name"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_additional_screens"
            android:fontFamily="@font/ys_display_regular"
            android:focusableInTouchMode="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_description"
        style="@style/PlaylistInputLayout"
        android:layout_marginTop="@dimen/low_padding"
        android:layout_marginBottom="148dp"
        app:layout_constraintTop_toBottomOf="@id/input_layout_name"
        app:layout_constraintStart_toStartOf="@id/left_border_pl_16"
        app:layout_constraintEnd_toEndOf="@id/right_border_pl_16"
        app:layout_constraintBottom_toTopOf="@id/barrier_bottom_pl"
        app:boxStrokeColor="@color/YP_blue">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_edit_text_description"
            android:hint="@string/description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="@dimen/text_size_additional_screens"
            android:fontFamily="@font/ys_display_regular"
            android:focusableInTouchMode="true" />
    </com.google.android.material.textfield.TextInputLayout>
    
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_playlist_bt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="@dimen/distance_between_elements"
        android:text="@string/create"
        android:textSize="@dimen/text_size_additional_screens"
        android:textAllCaps="false"
        android:textColor="@color/YP_white"
        android:fontFamily="@font/ys_display_medium"
        android:letterSpacing="0"
        android:enabled="false"
        android:maxLines="1"
        android:background="@drawable/selector_button_playlist"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_border_pl_16"
        app:layout_constraintStart_toStartOf="@id/left_border_pl_16"/>

</androidx.constraintlayout.widget.ConstraintLayout>