<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlist_details"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_light_gray"
    tools:context="com.example.playlistmaker.ui.library.DetailsPlaylistFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border_16_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/low_padding"/>

        <ImageView
            android:id="@+id/details_playlist_cover"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H, 1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/placeholder"/>

        <ImageView
            android:id="@+id/back"
            style="@style/ArrowBackButton"
            android:layout_marginStart="@dimen/low_padding"
            android:layout_marginTop="@dimen/low_padding"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/playlist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/high_padding"
            android:textColor="@color/YP_black"
            android:textSize="@dimen/high_text_size"
            android:fontFamily="@font/ys_display_bold"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@id/details_playlist_cover"
            tools:text="@string/title"/>

        <TextView
            android:id="@+id/playlist_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:textColor="@color/YP_black"
            android:textSize="@dimen/playlist_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@+id/playlist_name"
            tools:text="@string/description"/>

        <TextView
            android:id="@+id/playlist_time_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:textColor="@color/YP_black"
            android:textSize="@dimen/playlist_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@+id/playlist_description"
            tools:text="300 минут * 98 треков"/>

        <ImageView
            android:id="@+id/bt_playlist_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/rounding_buttons"
            android:src="@drawable/share"
            app:layout_constraintStart_toStartOf="@id/left_border_16_pl"
            app:layout_constraintTop_toBottomOf="@id/playlist_time_quantity"
            app:tint="@color/YP_black"/>

        <ImageView
            android:id="@+id/bt_playlist_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rounding_buttons"
            android:layout_marginTop="@dimen/rounding_buttons"
            android:src="@drawable/playlist_menu"
            app:layout_constraintStart_toEndOf="@id/bt_playlist_share"
            app:layout_constraintTop_toBottomOf="@id/playlist_time_quantity"
            app:tint="@color/YP_black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/playlist_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/darkening_screen"
        android:visibility="gone"/>

    <LinearLayout
        android:id="@+id/bottom_sheet_playlist_track"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_borrom_sheet_light"
        android:orientation="vertical"
        android:saveEnabled="true"
        app:behavior_hideable="false"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:background="@drawable/shape_bottom_sheet_handler" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_playlist_track"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/activity_track"
            />

        <TextView
            android:id="@+id/playlist_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="39dp"
            android:ellipsize="end"
            android:fontFamily="@font/ys_display_regular"
            android:maxLines="1"
            android:text="@string/playlist_track_empty"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/playlist_text_size"
            android:visibility="gone"
            tools:text="В плейлисте нет треков"/>
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/bottom_sheet_playlist_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/shape_borrom_sheet_light"
        android:paddingHorizontal="@dimen/meaning_13dp"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/distance_between_elements"
            android:background="@drawable/shape_bottom_sheet_handler"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/playlist_menu_cover"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:scaleType="centerCrop"
                android:src="@drawable/placeholder"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/playlist_menu_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorSecondary"
                    android:textSize="@dimen/playlist_text_size"
                    android:fontFamily="@font/ys_display_regular"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="@string/title"/>

                <TextView
                    android:id="@+id/playlist_menu_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/YP_text_gray"
                    android:textSize="10sp"
                    android:fontFamily="@font/ys_display_regular"
                    android:maxLines="1"
                    android:ellipsize="end"
                    tools:text="@string/description"/>

            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/bt_share_menu"
            style="@style/PlaylistMenuButton"
            android:text="@string/playlist_share"/>
        <Button
            android:id="@+id/bt_edit_playlist"
            style="@style/PlaylistMenuButton"
            android:text="@string/playlist_edit"/>
        <Button
            android:id="@+id/bt_delete_playlist"
            style="@style/PlaylistMenuButton"
            android:text="@string/playlist_delete"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>